[gd_scene load_steps=13 format=2]

[ext_resource path="res://interface/FadeRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/garoa_hacker_76.tres" type="DynamicFont" id=5]
[ext_resource path="res://levels/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/fonts/garoa_hacker_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://screens/score_screen/HighscoreScreen.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.894118, 0.470588, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.729412, 0.380392, 0.337255, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.91, 0.67, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.93, 0.58, 0.54, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.7, 0.6258, 0.329, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.6, 0.3138, 0.276, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"
pressed = true

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float cutoff: hint_range(0.0, 1.0) = 0.5;
uniform float smooth_percent : hint_range(0.0, 1.0) = 0.1;

void fragment()
{
	float value = texture(TEXTURE, UV).r;
	float alpha = smoothstep(cutoff, cutoff + smooth_percent, 
			value * (1.0 - smooth_percent) + smooth_percent);
	COLOR = vec4(vec3(0.0), alpha);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/cutoff = 0.0
shader_param/smooth_percent = 0.1

[node name="HighscoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 128.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 5 )
text = "new highscore!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 254.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 5 )
text = "xxxxx"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = 55.0
margin_right = 178.0
margin_bottom = 121.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
custom_colors/clear_button_color_pressed = Color( 0.152941, 0.152941, 0.211765, 1 )
custom_colors/font_color_selected = Color( 0.588235, 0.258824, 0.32549, 1 )
custom_colors/font_color = Color( 0.729412, 0.380392, 0.337255, 1 )
custom_colors/clear_button_color = Color( 0.152941, 0.152941, 0.211765, 1 )
align = 1
max_length = 10
placeholder_text = "name"
placeholder_alpha = 0.5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="LineEdit"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = 20.0
margin_bottom = 61.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.729412, 0.380392, 0.337255, 1 )
custom_colors/font_color_hover = Color( 0.93, 0.58, 0.54, 1 )
custom_colors/font_color_pressed = Color( 0.53, 0.18, 0.14, 1 )
shortcut = SubResource( 5 )
text = "submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreHTTPRequest" type="HTTPRequest" parent="."]

[node name="FadeRect" parent="." instance=ExtResource( 2 )]
material = SubResource( 7 )
next_scene_path = "res://screens/score_screen/LeaderboardScreen.tscn"

[node name="Background" parent="." instance=ExtResource( 6 )]

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="LineEdit/SubmitButton" to="." method="_on_SubmitButton_pressed"]
